@@ -1,5 +1,10 @@
 2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* rtems_ttcp.c, ttcp_orig/ttcp.c: Now compiles reasonably cleanly with
+	CVS head.
+
+2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* init.c: confdefs.h should be rtems/confdefs.h
 
 2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
